Turned off mongo (for now)

--- a/development.ini
+++ b/development.ini
@@ -6,6 +6,7 @@ debug_notfound = false
 debug_routematch = false
 debug_templates = true
 default_locale_name = en
+use_mongo = false
 mongodb.url = mongodb://localhost
 mongodb.port = 27017
 mongodb.db_name = mydb
