--- a/tox.ini
+++ b/tox.ini
@@ -22,6 +22,7 @@ deps =
     sphinx_rtd_theme
 basepython = python2.7
 commands = 
+    make -C docs doxygen
     sphinx-apidoc -f -o docs moe
     sphinx-build -b html docs docs/_build/html 
 
@@ -30,12 +31,8 @@ deps =
     flake8
     flake8-import-order
     pep8-naming
+    flake8-docstrings
 commands = flake8 moe
-
-[testenv:pep257]
-deps =
-    pep257
-commands = pep257 moe
 
 [flake8]
 exclude = .tox,*.egg
