--- a/tox.ini
+++ b/tox.ini
@@ -22,7 +22,8 @@ deps =
     sphinx_rtd_theme
 basepython = python2.7
 commands = 
-    make -C docs doxygen
+    python docs/cpp_rst_maker.py
+    doxygen docs/doxygen_config
     sphinx-apidoc -f -o docs moe
     sphinx-build -b html docs docs/_build/html 
 
