Log REST requests/responses to stdout and moe.log

--- a/development.ini
+++ b/development.ini
@@ -27,14 +27,21 @@ port = 6543
 keys = root, moe
 
 [handlers]
-keys = console
+keys = console, filelog
 
 [formatters]
 keys = generic
 
+[handler_filelog]
+class = FileHandler
+args = ('%(here)s/moe.log','a')
+level = DEBUG
+formatter = generic
+
+# used by all applications in the Pyramid process that ask for a logger
 [logger_root]
 level = INFO
-handlers = console
+handlers = console, filelog
 
 [logger_moe]
 level = DEBUG
