--- a/moe/optimal_learning/cpp/CMakeLists.txt
+++ b/moe/optimal_learning/cpp/CMakeLists.txt
@@ -34,6 +34,23 @@ if(NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE RelWithDebInfo)
 endif()
 
+#### User configured external dependencies
+# Sometimes cmake has difficulty finding Python (e.g., multiple installations, especially on OS X with
+# system vs macport/homebrew versions); explicitly specify the location of Python when that happens.
+# See documentation in FindPythonLibs.cmake for more information.
+if (EXISTS ${MOE_PYTHON_INCLUDE_DIR})
+  set(PYTHON_INCLUDE_DIR
+    ${MOE_PYTHON_INC_DIR}
+    CACHE PATH "Path to where Python.h is found."
+    )
+endif()
+if (EXISTS ${MOE_PYTHON_LIBRARY})
+  set(PYTHON_LIBRARY
+    ${MOE_PYTHON_LIB}
+    CACHE FILEPATH "Path to Python shared object (e.g., libpython2.7.so or .dylib)."
+    )
+endif()
+
 #### External dependencies
 find_package(PythonLibs REQUIRED)
 find_package(Boost COMPONENTS python REQUIRED)
