fixing some more line-width stuff moving constructors and nontrivial fcns to cpp files

--- a/moe/optimal_learning/cpp/CMakeLists.txt
+++ b/moe/optimal_learning/cpp/CMakeLists.txt
@@ -65,6 +65,7 @@ include_directories(${Boost_INCLUDE_DIRS})
 # readonly
 set(OPTIMAL_LEARNING_CORE_SOURCES
   gpp_covariance.cpp
+  gpp_domain.cpp
   gpp_exception.cpp
   gpp_heuristic_expected_improvement_optimization.cpp
   gpp_linear_algebra.cpp
