--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ cache:
 before_install:
     - sudo apt-get update -qq
     - sudo apt-get install -y build-essential gcc python python-dev python2.7 python2.7-dev cmake libboost-all-dev doxygen libblas-dev liblapack-dev gfortran git make flex bison libssl-dev libedit-dev
-    - sudo pip -r requirements.txt
+    - sudo pip install -r requirements.txt
 install:
     - python setup.py install
 script:
