--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ before_install:
     - sudo apt-get install -y build-essential gcc python python-dev python2.7 python2.7-dev cmake libboost-all-dev doxygen libblas-dev liblapack-dev gfortran git make flex bison libssl-dev libedit-dev python-numpy python-scipy
     - sudo pip install -r requirements.txt
 install:
-    - python setup.py install
+    - sudo python setup.py install
 script:
     - make test-no-tox
