--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,9 @@ cache:
     - apt
 before_install:
     - sudo apt-get update -qq
-    - sudo apt-get install -y build-essential gcc python python-dev python2.7 python2.7-dev cmake libboost-all-dev doxygen libblas-dev liblapack-dev gfortran git make flex bison libssl-dev libedit-dev python-numpy python-scipy
+    - sudo apt-get install -y build-essential gcc python python-dev python2.7 python2.7-dev libboost-all-dev doxygen libblas-dev liblapack-dev gfortran git make flex bison libssl-dev libedit-dev python-numpy python-scipy
     - sudo pip install -r requirements.txt
+    - sudo wget http://www.cmake.org/files/v2.8/cmake-2.8.12.2-Linux-i386.sh && sudo source cmake-2.8.12.2-Linux-i386.sh
 install:
     - sudo python setup.py install
 script:
