--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ cache:
 before_install:
     - sudo apt-get update -qq
     - sudo apt-get install -y build-essential python python-dev python2.7 python2.7-dev libboost-all-dev doxygen libblas-dev liblapack-dev gfortran git make flex bison libssl-dev libedit-dev python-numpy python-scipy
-    - sudo add-apt-repository ppa:ubuntu-toolchain-r/test && sudo apt-get update -q && sudo apt-get install gcc-4.7
-    - sudo add-apt-repository ppa:boost-latest/ppa && sudo apt-get update -q && sudo apt-get install boost1.55
+    - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test && sudo apt-get update -q && sudo apt-get install -y gcc-4.7
+    - sudo add-apt-repository -y ppa:boost-latest/ppa && sudo apt-get update -q && sudo apt-get install -y boost1.55
     - sudo wget http://www.cmake.org/files/v2.8/cmake-2.8.12.2.tar.gz && tar -zxf cmake-2.8.12.2.tar.gz && mv cmake-2.8.12.2/* . && ls && sudo chmod +x bootstrap && sudo ./bootstrap && sudo make && sudo make install
     - sudo pip install -r requirements.txt
 install:
