Manually specify how to run tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,6 @@ before_install:
 install:
     - sudo python setup.py install
 script:
-    - make test-no-tox
+    - pwd
+    - ls
+    - testify -v moe.tests
