--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,6 @@ before_install:
 install:
     - sudo python setup.py install
 script:
-    - testify -v moe.tests
-    - flake8 --ignore=E501,E126,E123,I101,N806 moe
-    - pep257 moe
-    - python docs/cpp_rst_maker.py && doxygen docs/doxygen_config && sphinx-apidoc -f -o docs moe && sphinx-build -b html docs docs/_build/html
+    - make test
+    - make style-test
+    - make docs
