changes regarding with eliu's comments

--- a/moe/optimal_learning/cpp/gpu/CMakeLists.txt
+++ b/moe/optimal_learning/cpp/gpu/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 2.8.9)
-find_package(CUDA)
+find_package(CUDA 5.0 REQUIRED)
 CUDA_INCLUDE_DIRECTORIES(
     ${CUDA_INCLUDE_DIRS}
-    /fs/home/jw865/samples/common/inc
+    ${MOE_CUDA_SDK_INCLUDE_DIRS}
     )
 
 # Provide a list of actual .cu files
