--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,13 @@
-pyramid
-pyramid_mako
-WebError
-testify
-webtest
-tox
-simplejson
+pyramid==1.5.1
+pyramid_mako==1.0.2
+WebError==0.10.3
+testify==0.5.3
+webtest==2.0.15
+simplejson==3.5.3
 numpy==1.8.1
-scipy
-colander>=1.0b1
-sphinx
+scipy==0.14.0
+colander==1.0b1
+sphinx==1.2.2
 breathe==1.2.0
-sphinxcontrib-httpdomain
-sphinx_rtd_theme
+sphinxcontrib-httpdomain==1.2.1
+sphinx_rtd_theme==0.1.6
