Updated changelog adding bandits

--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,7 @@ docs/latex/*
 docs/html/*
 docs/.doctrees/*
 docs/moe.*.rst
+docs/moe.rst
 docs/moe_examples.rst
 docs/moe_examples.*.rst
 docs/gpp_*.rst
