--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
+language: python
+python:
+    - "2.7"
 cache:
     - apt
 before_install:
     - sudo apt-get update -qq
-    - sudo apt-get install -y build-essential python python-dev python2.7 python2.7-dev libblas-dev liblapack-dev gfortran make libedit-dev
+    - sudo apt-get install -y build-essential libblas-dev liblapack-dev gfortran make libedit-dev
     - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test && sudo apt-get update -q && sudo apt-get install -y gcc-4.7 g++-4.7 && sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.7 20 && sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.7 20 && sudo update-alternatives --config gcc && sudo update-alternatives --config g++
     - sudo add-apt-repository -y ppa:boost-latest/ppa && sudo apt-get update -q && sudo apt-get install -y boost1.55
     - sudo add-apt-repository -y ppa:kalakris/cmake && sudo apt-get update -q && sudo apt-get install -y cmake
@@ -12,8 +15,20 @@ before_install:
     - sudo pip install -r requirements.txt
     - sudo pip install flake8 flake8-import-order pep8-naming flake8-docstrings
 install:
+    - export MOE_CMAKE_OPTS='-D MOE_PYTHON_INCLUDE_DIR=/usr/include/python2.7/ -D MOE_PYTHON_LIBRARY=/usr/lib/libpython2.7.so'
     - sudo python setup.py install
+before_script:
+    - echo "BEFORE SCRIPT"
+    - python -c "import zope.interface; print zope.interface.__file__"
 script:
+    - echo "BEFORE make docs"
+    - python -c "import zope.interface; print zope.interface.__file__"
     - make -B docs
+    - echo "AFTER make docs"
+    - python -c "import zope.interface; print zope.interface.__file__"
     - make -B test
     - make -B style-test
+    - python -c "import zope.interface; print zope.interface.__file__"
+    - echo "AFTER make test"
+after_script:
+    - echo "AFTER SCRIPT"
