printing more things! something is kaputt

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ testify==0.5.3
 webtest==2.0.15
 simplejson==3.5.3
 numpy==1.8.1
-scipy==0.14.0
+scipy>=0.8.0
 colander==1.0b1
 sphinx==1.2.2
 breathe==1.2.0
