--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,13 @@ python:
 cache:
     - apt
 env:
-    - MOE_CMAKE_OPTS='-D MOE_PYTHON_INCLUDE_DIR=/usr/include/python2.7/ -D MOE_PYTHON_LIBRARY=/usr/lib/libpython2.7.so'
+    - "MOE_CMAKE_OPTS='-D MOE_PYTHON_INCLUDE_DIR=/usr/include/python2.7/ -D MOE_PYTHON_LIBRARY=/usr/lib/libpython2.7.so'"
+    - MOE_OLD_OPTS='-D MOE_PYTHON_INCLUDE_DIR=/usr/include/python2.7/ -D MOE_PYTHON_LIBRARY=/usr/lib/libpython2.7.so'
+    - MOE_DERP_OPTS="-D MOE_PYTHON_INCLUDE_DIR=/usr/include/python2.7/ -D MOE_PYTHON_LIBRARY=/usr/lib/libpython2.7.so"
+    - MOE_FOO_OPTS=WEEEEEEE
 before_install:
     - sudo apt-get update -qq
-    - sudo apt-get install -y build-essential libblas-dev liblapack-dev gfortran make libedit-dev
+    - sudo apt-get install -y build-essential libblas-dev liblapack-dev gfortran make libedit-dev python-scipy
     - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test && sudo apt-get update -q && sudo apt-get install -y gcc-4.7 g++-4.7 && sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.7 20 && sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.7 20 && sudo update-alternatives --config gcc && sudo update-alternatives --config g++
     - sudo add-apt-repository -y ppa:boost-latest/ppa && sudo apt-get update -q && sudo apt-get install -y boost1.55
     - sudo add-apt-repository -y ppa:kalakris/cmake && sudo apt-get update -q && sudo apt-get install -y cmake
@@ -20,11 +23,16 @@ install:
     - sudo python setup.py install
 before_script:
     - echo "BEFORE SCRIPT"
+    - echo $MOE_CMAKE_OPTS
+    - echo $MOE_OLD_OPTS
+    - echo $MOE_DERP_OPTS
+    - echo $MOE_FOO_OPTS
     - which python && which python2.7
     - python -c "import sys; print (sys.version)"
     - python -c "import sys; print (sys.path)"
     - python2.7 -c "import sys; print (sys.version)"
     - python2.7 -c "import sys; print (sys.path)"
+    - ls /home/travis/virtualenv/python2.7.8/lib/python2.7/site-packages/
 #    - python -c "import zope.interface; print zope.interface.__file__"
 script:
     - echo "BEFORE make docs"
@@ -33,6 +41,7 @@ script:
     - python -c "import sys; print (sys.path)"
     - python2.7 -c "import sys; print (sys.version)"
     - python2.7 -c "import sys; print (sys.path)"
+    - ls /home/travis/virtualenv/python2.7.8/lib/python2.7/site-packages/
 #    - python -c "import zope.interface; print zope.interface.__file__"
     - make -B docs
     - echo "AFTER make docs"
@@ -41,6 +50,7 @@ script:
     - python -c "import sys; print (sys.path)"
     - python2.7 -c "import sys; print (sys.version)"
     - python2.7 -c "import sys; print (sys.path)"
+    - ls /home/travis/virtualenv/python2.7.8/lib/python2.7/site-packages/
 #    - python -c "import zope.interface; print zope.interface.__file__"
     - make -B test
     - make -B style-test
@@ -50,6 +60,7 @@ script:
     - python -c "import sys; print (sys.path)"
     - python2.7 -c "import sys; print (sys.version)"
     - python2.7 -c "import sys; print (sys.path)"
+    - ls /home/travis/virtualenv/python2.7.8/lib/python2.7/site-packages/
 #    - python -c "import zope.interface; print zope.interface.__file__"
 after_script:
     - echo "AFTER SCRIPT"
