--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,16 @@ cache:
 env:
     - MOE_CMAKE_OPTS="-D MOE_PYTHON_INCLUDE_DIR=/usr/include/python2.7/ -D MOE_PYTHON_LIBRARY=/usr/lib/libpython2.7.so" MOE_OLD_OPTS='-D MOE_PYTHON_INCLUDE_DIR=/usr/include/python2.7/ -D MOE_PYTHON_LIBRARY=/usr/lib/libpython2.7.so' MOE_DERP_OPTS="-D MOE_PYTHON_INCLUDE_DIR=/usr/include/python2.7/ -D MOE_PYTHON_LIBRARY=/usr/lib/libpython2.7.so" MOE_FOO_OPTS=WEEEEEEE
 before_install:
+    - which python && which python2.7
+    - python -c "import sys; print (sys.version)"
+    - python -c "import sys; print (sys.path)"
+    - python2.7 -c "import sys; print (sys.version)"
+    - python2.7 -c "import sys; print (sys.path)"
+    - ls /usr/local/lib/python2.7/dist-packages/
+    - ls /usr/local/lib/python2.7/site-packages/
+    - ls /usr/lib/python2.7/dist-packages
+#    - ls /home/travis/virtualenv/python2.7.8/lib/python2.7/site-packages/
+    - pip list
     - sudo apt-get update -qq
     - sudo apt-get install -y build-essential libblas-dev liblapack-dev gfortran make libedit-dev python-scipy
     - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test && sudo apt-get update -q && sudo apt-get install -y gcc-4.7 g++-4.7 && sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.7 20 && sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.7 20 && sudo update-alternatives --config gcc && sudo update-alternatives --config g++
