--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+language: python
 python:
     - "2.7"
 cache:
@@ -13,7 +14,7 @@ before_install:
     - ls /usr/local/lib/python2.7/dist-packages/
     - ls /usr/local/lib/python2.7/site-packages/
     - ls /usr/lib/python2.7/dist-packages
-#    - ls /home/travis/virtualenv/python2.7.8/lib/python2.7/site-packages/
+    - ls /home/travis/virtualenv/python2.7.8/lib/python2.7/site-packages/
     - pip list
     - sudo apt-get update -qq
     - sudo apt-get install -y build-essential libblas-dev liblapack-dev gfortran make libedit-dev python-scipy
@@ -41,36 +42,12 @@ before_script:
     - ls /usr/local/lib/python2.7/dist-packages/
     - ls /usr/local/lib/python2.7/site-packages/
     - ls /usr/lib/python2.7/dist-packages
-#    - ls /home/travis/virtualenv/python2.7.8/lib/python2.7/site-packages/
+    - ls /home/travis/virtualenv/python2.7.8/lib/python2.7/site-packages/
     - pip list
     - python -c "import pyramid; import pkg_resources; print pyramid.__file__; print pkg_resources.get_distribution('pyramid').version"
 #    - python -c "import zope.interface; print zope.interface.__file__"
 script:
-    - echo "BEFORE make docs"
-    - which python && which python2.7
-    - python -c "import sys; print (sys.version)"
-    - python -c "import sys; print (sys.path)"
-    - python2.7 -c "import sys; print (sys.version)"
-    - python2.7 -c "import sys; print (sys.path)"
-    - ls /usr/local/lib/python2.7/dist-packages/
-    - ls /usr/local/lib/python2.7/site-packages/
-    - ls /usr/lib/python2.7/dist-packages
-#    - ls /home/travis/virtualenv/python2.7.8/lib/python2.7/site-packages/
-    - pip list
-#    - python -c "import zope.interface; print zope.interface.__file__"
     - make -B docs
-    - echo "AFTER make docs"
-    - which python && which python2.7
-    - python -c "import sys; print (sys.version)"
-    - python -c "import sys; print (sys.path)"
-    - python2.7 -c "import sys; print (sys.version)"
-    - python2.7 -c "import sys; print (sys.path)"
-    - ls /usr/local/lib/python2.7/dist-packages/
-    - ls /usr/local/lib/python2.7/site-packages/
-    - ls /usr/lib/python2.7/dist-packages
-#    - ls /home/travis/virtualenv/python2.7.8/lib/python2.7/site-packages/
-    - pip list
-#    - python -c "import zope.interface; print zope.interface.__file__"
     - make -B test
     - make -B style-test
     - echo "AFTER make test"
@@ -82,7 +59,7 @@ script:
     - ls /usr/local/lib/python2.7/dist-packages/
     - ls /usr/local/lib/python2.7/site-packages/
     - ls /usr/lib/python2.7/dist-packages
-#    - ls /home/travis/virtualenv/python2.7.8/lib/python2.7/site-packages/
+    - ls /home/travis/virtualenv/python2.7.8/lib/python2.7/site-packages/
     - pip list
 #    - python -c "import zope.interface; print zope.interface.__file__"
 after_script:
